# live-profiler

./: .travis.yml  DesignNote.txt  LICENSE  README.md
tests/: CMakeLists.txt  Main.cpp  buildit.sh  check_valgrind.sh  run_tests.sh  tool_cppcheck.sh  tool_gdb.sh  tool_valgrind.sh
tests/Cases/Analyzers/: TestCpuSampleFrequencyAnalyzer.cpp  TestCpuSampleFrequencyAnalyzer.hpp  TestCpuSampleHotPathAnalyzer.cpp  TestCpuSampleHotPathAnalyzer.hpp  TestCpuSampleUtils.hpp
tests/Cases/Collectors/: TestCpuSampleLinuxCollector.cpp  TestCpuSampleLinuxCollector.hpp
tests/Cases/Interceptors/: TestCpuSampleLinuxSymbolResolveInterceptor.cpp  TestCpuSampleLinuxSymbolResolveInterceptor.hpp
tests/Cases/Profiler/: TestProfiler.cpp  TestProfiler.hpp
tests/Cases/Utils/: TestLinuxEpollDescriptor.cpp  TestLinuxEpollDescriptor.hpp  TestLinuxPerfEntryAllocator.cpp  TestLinuxPerfEntryAllocator.hpp  TestLinuxPerfUtils.cpp  TestLinuxPerfUtils.hpp  TestLinuxProcessUtils.cpp  TestLinuxProcessUtils.hpp  TestStackBuffer.cpp  TestStringUtils.cpp  TestStringUtils.hpp  TestTypeConvertUtils.cpp  TestTypeConvertUtils.hpp
tests/Cases/Utils/Allocators/: TestFreeListAllocator.cpp  TestFreeListAllocator.hpp  TestSingletonAllocator.cpp  TestSingletonAllocator.hpp
tests/Cases/Utils/Containers/: TestStackBuffer.cpp  TestStackBuffer.hpp
tests/Cases/Utils/Platform/Linux/: TestLinuxEpollDescriptor.cpp  TestLinuxExecutableSymbolResolver.cpp  TestLinuxExecutableSymbolResolver.hpp  TestLinuxPerfUtils.cpp  TestLinuxProcessAddressLocator.cpp  TestLinuxProcessAddressLocator.hpp  TestLinuxProcessAddressMap.cpp  (+4 more)
(+52 files in other folders)
